refactor: refactored profile_controller
